fixed jumplinks and started media queries

--- a/reset.css
+++ b/reset.css
@@ -3,3 +3,11 @@
     padding: 0;
 }
 
+body{
+    margin: 0%;
+    padding: 0%;
+}
+
+h1, h2,main{
+    font-family: 'Times New Roman', Times, serif;
+}
